<resources>
    <string name="about">About</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_devs">Developers</string>
    <string name="about_disclaimer">This is an unofficial app for students and teachers of Windesheim. Despite careful programming I can not guarantee that the shown data is correct and complete. Therefore use this app at your own risk. Windesheim and I can not be held liable for incorrect and incomplete data. Your login data will only be saved locally on this device. When your device is rooted you might be vulnerable for other apps with root permission to read this data.\n\nMyWindesheim uses Firebase Analytics for tracking events and crashes in this app. You can opt out for tracking in settings.\n\nWhen you are using this app you automatically agree with this conditions.</string>
    <string name="alert_connection_description">The data could not be retrieved. Check your internet connection and try again.</string>
    <string name="alert_connection_title">Problem while connecting!</string>
    <string name="app_name">MyWindesheim</string>
    <string name="april">April</string>
    <string name="august">August</string>
    <string name="auth_add_account">Add your account</string>
    <string name="auth_description">Add your account to get access to the services of Windesheim.</string>
    <string name="auth_invalid_password">Invalid password</string>
    <string name="auth_invalid_username">Invalid username</string>
    <string name="auth_loading">Logging in…</string>
    <string name="auth_login">LOGIN</string>
    <string name="auth_login_failed">Failed to log in. Check your username and password.</string>
    <string name="auth_password">Password</string>
    <string name="auth_student_only">At the moment, only student accounts are supported.</string>
    <string name="auth_username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="canceled_downloading">Download has been cancelled</string>
    <string name="choose_class">Choose your class</string>
    <string name="choose_class_description">Here you can search your class, after that click on it to add it to your overview.</string>
    <string name="choose_class_hint">Enter your class</string>
    <string name="choose_subject">Choose your subject</string>
    <string name="choose_subject_description">Here you can search your desired subject, after that click on it to add it to your overview.</string>
    <string name="choose_subject_hint">Enter your subject</string>
    <string name="choose_teacher">Choose your name or teacher code</string>
    <string name="choose_teacher_description">Here you can search your name or teacher code, after that click on it to add it to your overview.</string>
    <string name="choose_teacher_hint">Enter your name or teacher code</string>
    <string name="confirmation">Are you sure?</string>
    <string name="connect">Connect</string>
    <string name="connection_problem">A problem occurred while fetching data</string>
    <string name="courses">Courses</string>
    <string name="december">December</string>
    <string name="delete">Delete</string>
    <string name="delete_file_description">This will delete the file permanently.</string>
    <string name="delete_schedule_description">This will remove the schedule from this device.</string>
    <string name="deletion_description">This will hide all lessons of this subject, these can be restored via the menu.</string>
    <string name="description_coen">Spell checking</string>
    <string name="description_engbert">Tester</string>
    <string name="description_giovanni">Developer and maintainer</string>
    <string name="description_thomas">N@Tschool! implementation</string>
    <string name="disable_notification_description">Click this notification to turn it off</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="downloading">Downloading…</string>
    <string name="downloads">Downloads</string>
    <string name="duplicate_description">You have already chosen this schedule. Please choose another one.</string>
    <string name="duplicate_title">Duplicate</string>
    <string name="ec_description">%1$d of the %2$d EC\'s have been achieved</string>
    <string name="elo">ELO</string>
    <string name="exceed_limit_description">You can only use a maximum of 5 schedules at once. Please delete a schedule first and try it again.v</string>
    <string name="exceed_limit_title">Too many schedules</string>
    <string name="february">February</string>
    <string name="file_deleted">File has been deleted</string>
    <string name="finished">FINISHED</string>
    <string name="fix">FIX IT</string>
    <string name="friday">Friday</string>
    <string name="hidden_schedule_label">Hidden lessons</string>
    <string name="hidden_schedule_not_found">No hidden lessons were found</string>
    <string name="hide">Hide</string>
    <string name="hide_lesson">Hide lesson</string>
    <plurals name="hours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other">%s hours</item>
    </plurals>
    <string name="icon">icon</string>
    <string name="interval_always_on">Always on</string>
    <string name="interval_fifteen_minutes">15 minutes before lesson</string>
    <string name="interval_off">Off</string>
    <string name="interval_one_hour">1 hour before lesson</string>
    <string name="interval_thirty_minutes">30 minutes before lesson</string>
    <string name="intro">Introduction</string>
    <string name="intro_1_description">MyWindesheim gives you easy access to all services of Windesheim.</string>
    <string name="intro_1_title">Welcome to MyWindesheim</string>
    <string name="intro_2_description">View up to five schedules at the same time, whenever and wherever you want.</string>
    <string name="intro_2_title">Schedules</string>
    <string name="intro_3_description">Hide lessons you do not need, or save them to your calendar.</string>
    <string name="intro_3_title">Manage</string>
    <string name="intro_4_description">Download all files from the ELO, easily and quickly.</string>
    <string name="intro_4_title">ELO</string>
    <string name="intro_5_description">View your results and know what you\'re up to.</string>
    <string name="intro_5_title">Progress</string>
    <string name="intro_6_description">Know exactly when your class starts.</string>
    <string name="intro_6_title">Notifications</string>
    <string name="intro_7_description">Thank you for choosing MyWindesheim, good luck with your study!</string>
    <string name="intro_7_title">You are set!</string>
    <string name="january">January</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="lesson_hidden">Lesson has been hidden</string>
    <string name="lesson_restored">Lesson has been restored</string>
    <string name="lesson_started">STARTED</string>
    <string name="login">Login</string>
    <string name="manage_schedules">Manage schedules</string>
    <string name="march">March</string>
    <string name="may">May</string>
    <string name="menuitem_about">About this app</string>
    <string name="menuitem_manage_schedules">Manage schedules</string>
    <string name="menuitem_restore_lessons">Restore lessons</string>
    <plurals name="minutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other">%s minutes</item>
    </plurals>
    <string name="monday">Monday</string>
    <string name="multiple_lessons_notification">You have multiple lessons %1$s</string>
    <string name="no_app_found">No app was found to open this file</string>
    <string name="no_calendar_found">No calendar was found</string>
    <string name="no_content_found">No files were found</string>
    <string name="no_permission">No access to the SD card</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="ok">OK</string>
    <string name="overflow_description">Options</string>
    <string name="pager_item_classes">Classes</string>
    <string name="pager_item_subjects">Subjects</string>
    <string name="pager_item_teachers">Teachers</string>
    <string name="persistent_notification">Persistent notification</string>
    <string name="persistent_notification_description">Persistent notification which shows the time when a lesson starts</string>
    <string name="progress">Progress</string>
    <string name="progress_results">Results</string>
    <string name="propaedeutic_phase">Propaedeutic phase</string>
    <string name="push_notification">Push notifications</string>
    <string name="push_notification_description">Notifications for lessons and schedule changes</string>
    <string name="rating_prompt_description">Support MyWindesheim and give a rating!</string>
    <string name="rating_prompt_rate">RATE</string>
    <string name="restore">Restore</string>
    <string name="save_lesson">Save lesson to calendar</string>
    <string name="schedule_changed">Your schedule has been changed!</string>
    <string name="schedule_deleted">Schedule has been deleted</string>
    <string name="schedule_not_found">No lessons are found for this day</string>
    <string name="schedule_toolbar_text">%1$s %2$s %3$d</string>
    <string name="september">September</string>
    <string name="service_notification">Background service</string>
    <string name="service_notification_description">Indicates if MyWindesheim is running</string>
    <string name="settings">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_dark_mode_description">Use dark colors</string>
    <string name="settings_interval">Time for notify</string>
    <string name="settings_lessons">Lessons</string>
    <string name="settings_lessons_description">Notify when a new lesson starts</string>
    <string name="settings_logout">LOGOUT</string>
    <string name="settings_logout_msg">Account has been logged out from this device</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_schedule_change">Schedule changes</string>
    <string name="settings_schedule_change_description">Notify when the schedule changes</string>
    <string name="settings_telemetry">Anonymous tracking</string>
    <string name="settings_telemetry_description">Allow anonymous tracking</string>
    <string name="settings_week_count">Amount of weeks in overview</string>
    <string name="settings_week_count_description">Select the amount of weeks to show in your schedule overview:</string>
    <string name="settings_week_count_current">%1$s shown in your schedule overview</string>
    <plurals name="week_count">
        <item quantity="other">%s weeks are</item>
        <item quantity="one">1 week is</item>
    </plurals>
    <string name="week_count_bottom_text">Week %1$d of %2$d</string>
    <string name="single_lesson_notification">You have %1$s %2$s in %3$s</string>
    <string name="thursday">Thursday</string>
    <string-array name="time_until">
        <item>in less than 1 minute</item>
        <item>in %1$s</item>
        <item>in %2$s</item>
        <item>in %1$s and %2$s</item>
    </string-array>
    <string name="title_coen">Coen van Dam</string>
    <string name="title_engbert">Engbert Blaauw</string>
    <string name="title_giovanni">Giovanni Terlingen</string>
    <string name="title_thomas">Thomas Visch</string>
    <string name="today">Today</string>
    <string name="tuesday">Tuesday</string>
    <string name="undo">UNDO</string>
    <string name="wednesday">Wednesday</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_sync_calendar">Synchronize lessons</string>
</resources>