<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/one"
        android:checkableBehavior="none">
        <item
            android:id="@+id/change_schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menuitem_change_schedule" />
        <item
            android:id="@+id/elo"
            android:icon="@drawable/ic_school"
            android:title="@string/elo" />
        <item
            android:id="@+id/progress"
            android:icon="@drawable/ic_results"
            android:title="@string/progress" />
        <item
            android:id="@+id/downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/downloads" />
        <item
            android:id="@+id/restore_lessons"
            android:icon="@drawable/ic_check"
            android:title="@string/menuitem_restore_lessons" />
    </group>
    <group
        android:id="@+id/two"
        android:checkableBehavior="none">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_help"
            android:title="@string/menuitem_about" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>