<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.AuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFCFC"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="56.0dip"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingEnd="32.0dip"
            android:paddingLeft="32.0dip"
            android:paddingRight="32.0dip"
            android:paddingStart="32.0dip"
            android:text="@string/auth_add_account"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7.0dip"
            android:indeterminate="true"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="64.0dip"
                android:paddingLeft="32.0dip"
                android:paddingRight="32.0dip"
                android:paddingTop="16.0dip">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="32.0dip"
                    android:scaleType="fitStart"
                    android:src="@drawable/windesheim_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32.0dip"
                    android:paddingTop="16.0dip"
                    android:text="@string/auth_description"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8.0dip"
                    android:paddingTop="8.0dip">

                    <EditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auth_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8.0dip"
                    android:paddingTop="8.0dip">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auth_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64.0dip"
        android:layout_alignParentBottom="true"
        android:background="#E5E7E9"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#55000000" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="?selectableItemBackground"
                android:drawableEnd="@drawable/ic_navigate_next"
                android:drawableRight="@drawable/ic_navigate_next"
                android:minWidth="100dp"
                android:text="@string/auth_login" />

        </FrameLayout>
    </LinearLayout>
</RelativeLayout>